--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
-#Prova di GIT
-- uno 
-- due
-- tre
-- quattro
+#Comandi di GIT ancora da esplorare:
+
+- git branch nome
+- git checkout nome
+- git merge nome
+
+
 
